<resources>
    <string name="app_name">UIDemo</string>

    <!--教师端-->
    <string name="teacher">--- 教师端 ---</string>
    <string name="user_info">教师个人中心</string>
    <string name="animation_3D">3D旋转动画</string>
    <string name="teachers_student">学生</string>
    <string name="course_manager">课程管理</string>

    <!--学生端-->
    <string name="student">--- 学生端 ---</string>
    <string name="student_info">学生个人中心</string>
    <string name="course_live">课程直播</string>
    <string name="book_teacher">预约老师</string>
    <string name="FTEnglishLive">方糖英语直播</string>
    <string name="outdoor_live">户外直播</string>

    <!--登录注册-->
    <string name="comment">--- 注册和登录 ---</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="sign_in">签到</string>
    <string name="shrinkage">缩放</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="effect_blur">blur</string>
    <string name="effect_split">split</string>
    <string name="effect_close">close</string>
    <string name="effect_twister">twister</string>
    <string name="effect_folding">folding</string>
    <string name="effect_skew">skew</string>
    <string name="effect_water">water</string>

</resources>
